// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav component should change width after clicking on burger icon 1`] = `
.c8 {
  font-size: 16px;
}

.c8.c8.c8 * {
  fill: #012040;
}

.c4 {
  display: block;
  position: absolute;
  width: calc(16px * 1.33);
  height: calc(16px * 0.2);
  background: #012040;
  border-radius: calc(16px * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c4:nth-child(1) {
  top: 0px;
}

.c4:nth-child(2) {
  top: calc(16px * 0.4);
}

.c4:nth-child(3) {
  top: calc(16px * 0.8);
}

.c2 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(16px * 1.33);
  height: 16px;
  position: relative;
  margin: 10px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c2 .c3:nth-child(1) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c2 .c3:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.c2 .c3:nth-child(3) {
  top: calc(16px * 0.4);
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

.c10 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c6 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 60px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  cursor: pointer;
}

.c6 .c7 {
  font-size: 24px;
}

.c6 .c9 {
  font-size: 16px;
  color: #012040;
}

.c11 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 60px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7C7B7B;
  cursor: pointer;
}

.c11 .c7 {
  font-size: 24px;
}

.c11 .c9 {
  font-size: 16px;
  color: #012040;
}

.c5 {
  height: 100%;
  padding: 0px;
  margin: 0px;
  list-style-type: none;
  color: #012040;
}

.c12 .c9 {
  opacity: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.c0 {
  height: 100%;
  background-color: #999999;
  width: 0px;
  position: fixed;
  z-index: 1;
  top: 0;
  overflow: hidden;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 250px;
  background-color: #CCCCCC;
}

.c0 .c9 {
  opacity: 1;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 60px;
  min-height: 60px;
}

<div>
  <div
    class="c0"
    open=""
  >
    <div
      class="c1"
    >
      <button
        class="c2"
        open=""
      >
        <span
          class="c3 c4"
        />
        <span
          class="c3 c4"
        />
        <span
          class="c3 c4"
        />
      </button>
    </div>
    <ul
      class="c5"
    >
      <li
        class="c6"
      >
        <div
          class="c1"
        >
          <svg
            class="c7 c8"
            height="1em"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
            />
          </svg>
        </div>
        <span
          class="c9 c10"
        >
          Home
        </span>
      </li>
      <li
        class="c11"
      >
        <div
          class="c1"
        >
          <svg
            class="c7 c8"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
              fill="none"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <span
          class="c9 c10"
        >
          Search
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`SideNav component should render properly 1`] = `
.c7 {
  font-size: 16px;
}

.c7.c7.c7 * {
  fill: #012040;
}

.c3 {
  display: block;
  position: absolute;
  width: calc(16px * 1.33);
  height: calc(16px * 0.2);
  background: #012040;
  border-radius: calc(16px * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c3:nth-child(1) {
  top: 0px;
}

.c3:nth-child(2) {
  top: calc(16px * 0.4);
}

.c3:nth-child(3) {
  top: calc(16px * 0.8);
}

.c2 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(16px * 1.33);
  height: 16px;
  position: relative;
  margin: 10px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c9 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c5 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 60px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  cursor: pointer;
}

.c5 .c6 {
  font-size: 24px;
}

.c5 .c8 {
  font-size: 16px;
  color: #012040;
}

.c10 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 60px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #7C7B7B;
  cursor: pointer;
}

.c10 .c6 {
  font-size: 24px;
}

.c10 .c8 {
  font-size: 16px;
  color: #012040;
}

.c4 {
  height: 100%;
  padding: 0px;
  margin: 0px;
  list-style-type: none;
  color: #012040;
}

.c0 {
  height: 100%;
  background-color: #999999;
  width: 0px;
  position: fixed;
  z-index: 1;
  top: 0;
  overflow: hidden;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 60px;
  background-color: #CCCCCC;
}

.c0 .c8 {
  opacity: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 60px;
  min-height: 60px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <button
        class="c2"
      >
        <span
          class="c3"
        />
        <span
          class="c3"
        />
        <span
          class="c3"
        />
      </button>
    </div>
    <ul
      class="c4"
    >
      <li
        class="c5"
      >
        <div
          class="c1"
        >
          <svg
            class="c6 c7"
            height="1em"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
            />
          </svg>
        </div>
        <span
          class="c8 c9"
        >
          Home
        </span>
      </li>
      <li
        class="c10"
      >
        <div
          class="c1"
        >
          <svg
            class="c6 c7"
            height="1em"
            viewBox="0 0 18 18"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.5 11h-.79l-.28-.27A6.471 6.471 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L17.49 16l-4.99-5zm-6 0C4.01 11 2 8.99 2 6.5S4.01 2 6.5 2 11 4.01 11 6.5 8.99 11 6.5 11z"
              fill="none"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <span
          class="c8 c9"
        >
          Search
        </span>
      </li>
    </ul>
  </div>
</div>
`;
